[package]
name = "wetc_item_configurator_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eve_item_configurator_server = { git = "https://github.com/WiggidyW/eve_item_configurator_server_rs.git" }
eve_item_configurator_gcstorage_accessor = { git = "https://github.com/WiggidyW/eve_item_configurator_gcstorage_accessor_rs.git" }
eve_item_configurator_sqlite_accessor = { git = "https://github.com/WiggidyW/eve_item_configurator_sqlite_accessor_rs.git" }
eve_item_configurator_firestore_accessor = { git = "https://github.com/WiggidyW/eve_item_configurator_firestore_accessor_rs.git" }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tonic = { version = "0.9.2" }
